<resources>
    <string name="app_name">Moodlet</string>
    <string name="title_history">History</string>
    <string name="title_friend_activity">Friend Activity</string>
    <string name="title_discover">Discover</string>
    <string name="title_map">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
...
    <string name="account_already_exists">Account with this email already exists</string>
    <string name="username_taken">Username is already taken</string>
    <string name="please_try_again_later">Something went wrong, please try again later</string>
    <string name="delete_failed">Failed to delete</string>
    <string name="delete_success">Successfully deleted!</string>
    <string name="search_hint">Search for users to follow</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="requested">Requested</string>
    <string name="upload_failure">Upload failed</string>
    <string name="word_count_exceeded">Reason must have less than 3 words</string>
    <string name="mood">Mood</string>
    <string name="social_situation">Social Situation</string>
    <string name="reason">Reason</string>
    <string name="filter_happy">Happy</string>
...
