...
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_moodlet_icon" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edit_text_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:hint="@string/password" />
...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.AppCompat.Button"
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/login"
                    android:textColor="#FFF"
                    app:cornerRadius="10dp"
...
