...
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_friend_activity" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_pin_drop_black_24dp"
...
