<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/user_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="40dp"
        android:queryHint="@string/search_hint"
        android:iconifiedByDefault="false"/>

    <ListView
        android:id="@+id/user_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="0dp"
        android:divider="@null"/>

    <TextView
        android:id="@+id/no_users_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_search"
        android:gravity="center"
        android:visibility="gone"/>

</LinearLayout>
